# ena_downloader

./: .copier-answers.yml  LICENSE  README.md  index.html  objects.inv  pyproject.toml
docs/: index.md
src/ena_downloader/: __init__.py  cli.py  downloader.py  main.py  utils.py
tests/: conftest.py  test_downloader.py  test_main.py
